--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <title>index</title>
     <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="css/main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.css">
   </head>
   <body>
+
+<nav>
+  <ul>
+    <li><a href="#">MY<span>FOLIO</span></a></li>
+    <li><a href="#">HOME</a></li>
+    <li><a href="#">ABOUT ME</a></li>
+    <li><a href="#">SERVICES</a></li>
+    <li><a href="#">CONTACT ME</a></li>
+
+  </ul>
+
+</nav>
+
 
   </body>
 </html>
